--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 </div>
                 <h2>Práctica libre</h2>
             </div>          
-            <h3>Copyright MAGP</h3>
+            <h3>Copyright AG</h3>
+                       
         </div>
     </header>    
 </body>
