--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="proyecto">
                 <div class="foto">
                     <a href="./foto/index.html">                    
-                        <img src="./assets/img/foto.jpg" width="300px" height="400px" alt="">
+                        <img src="./assets/img/foto.jpg" alt="">
                     </a>
                 </div>
                 <h2>Proyecto Fotografía</h2>
@@ -25,7 +25,7 @@
             <div class="proyecto">
                 <div class="foto">
                     <a href="./practica/index.html">  
-                    <img src="./assets/img/practica.jpg" width="300px"height="400px" alt="">
+                    <img src="./assets/img/practica.jpg" alt="">
                     </a>
                 </div>
                 <h2>Práctica libre</h2>
