--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <img src="./assets/img/foto.jpg" alt="">
                     </a>
                 </div>
-                <h2>Proyecto Fotografía</h2>
+                <a href="./foto/index.html"><h2>Proyecto Fotografía</h2></a>
                     
             </div>
             <div class="proyecto">
@@ -28,7 +28,7 @@
                     <img src="./assets/img/practica.jpg" alt="">
                     </a>
                 </div>
-                <h2>Práctica libre</h2>
+                <a href="./practica/index.html"><h2>Práctica libre</h2></a>
             </div>            
         </div>
         <div id="contenedor_copyright">
