--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
                 </div>
                 <a href="./practica/index.html"><h2>Práctica libre</h2></a>
             </div>            
+            <div class="proyecto">
+                <div class="foto">
+                    <a href="">  
+                    <img src="./assets/img/3.jpg" alt="">
+                    </a>
+                </div>
+                <a href=""><h2>En construcción</h2></a>
+            </div>            
         </div>
         <div id="contenedor_copyright">
             <p>Copyright MAGP</p>
