--- a/index.html
+++ b/index.html
@@ -8,20 +8,17 @@
     <link rel="shortcut icon" href="./assets/img/ICONO_150.png" type="image/x-icon">
 </head>
 <body>
-    <header>
+    <main>
         <div id="contenedor_titulo">
             <h1>Proyectos web nativos A.G.</h1>
         </div>
         <div id="contenedor_proyectos">
-            <div class="proyecto">
-                <div class="foto">
-                    <a href="./foto/index.html">                    
-                        <img src="./assets/img/foto.jpg" alt="">
-                    </a>
+            <a href="./foto/index.html" class="proyecto">
+                <div class="contenedorFoto">                                    
+                    <img src="./assets/img/foto.jpg" alt="">
                 </div>
-                <a href="./foto/index.html"><h2>Proyecto Fotografía</h2></a>
-                    
-            </div>
+                <h2>Proyecto Fotografía</h2>                    
+            </a>
             <div class="proyecto">
                 <div class="foto">
                     <a href="./practica/index.html">  
@@ -42,7 +39,6 @@
         <div id="contenedor_copyright">
             <p>Copyright MAGP</p>
         </div>
-    </header>  
-    
+    </main>    
 </body>
 </html>
