--- a/index.html
+++ b/index.html
@@ -14,27 +14,23 @@
         </div>
         <div id="contenedor_proyectos">
             <a href="./foto/index.html" class="proyecto">
-                <div class="contenedorFoto">                                    
-                    <img src="./assets/img/foto.jpg" alt="">
+                <div class="contenedorFoto">
+                   <img src="./assets/img/foto.jpg" alt="">
                 </div>
                 <h2>Proyecto Fotografía</h2>                    
             </a>
-            <div class="proyecto">
-                <div class="foto">
-                    <a href="./practica/index.html">  
-                    <img src="./assets/img/practica.jpg" alt="">
-                    </a>
+            <a href="./practica/index.html" class="proyecto">
+                <div class="contenedorFoto">                              <img src="./assets/img/practica.jpg" alt="">
                 </div>
-                <a href="./practica/index.html"><h2>Práctica libre</h2></a>
-            </div>            
-            <div class="proyecto">
-                <div class="foto">
-                    <a href="">  
-                    <img src="./assets/img/3.jpg" alt="">
-                    </a>
+                <h2>Práctica libre</h2>  
+            </a>
+            <a href="./ciudades/index.html" class="proyecto">
+                <div class="contenedorFoto">
+                    <img src="./assets/img/ciudades.jpg" alt="">
                 </div>
-                <a href=""><h2>En construcción</h2></a>
-            </div>            
+                <h2>Tres Ciudades</h2>  
+            </a>
+            
         </div>
         <div id="contenedor_copyright">
             <p>Copyright MAGP</p>
