--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
                 <h2>Proyecto Fotografía</h2>                    
             </a>
             <a href="./practica/index.html" class="proyecto">
-                <div class="contenedorFoto">                              <img src="./assets/img/practica.jpg" alt="">
+                <div class="contenedorFoto">
+                    <img src="./assets/img/practica.jpg" alt="">
                 </div>
                 <h2>Práctica libre</h2>  
             </a>
-            <a href="./ciudades/index.html" class="proyecto">
+            <a href="./ciudades/index.php" class="proyecto">
                 <div class="contenedorFoto">
                     <img src="./assets/img/ciudades.jpg" alt="">
                 </div>
